--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "nodemon": "^2.0.0"
   },
   "dependencies": {
-    "express": "^4.18.0",
-    "ejs": "^3.1.0"
+    "ejs": "^3.1.10",
+    "express": "^4.21.2"
   }
 }
